--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "node": "^14.8.0",
-    "pbkdf2-password": "^1.2.1"
+    "pbkdf2-password": "^1.2.1",
+    "properties-reader": "^2.1.1"
   }
 }
