--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "assert": "^2.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
